[gd_scene load_steps=17 format=3 uid="uid://dqqfabtceas0f"]

[ext_resource type="Script" uid="uid://cytbs1cgo7vi4" path="res://scripts/UI/ui.gd" id="1_nt7q6"]
[ext_resource type="PackedScene" uid="uid://bpq4fxmq1ukwa" path="res://scenes/UI/Hub/main_player_hub.tscn" id="2_gdt2y"]
[ext_resource type="PackedScene" uid="uid://cwh1c1078d3dt" path="res://scenes/dice.tscn" id="3_wm3ai"]
[ext_resource type="PackedScene" uid="uid://cy08nosal4m77" path="res://scenes/UI/Popups/pop_up_jail.tscn" id="4_7e3k0"]
[ext_resource type="PackedScene" uid="uid://y6uj0iy65iy0" path="res://scenes/UI/Popups/popup_offre.tscn" id="4_8dubc"]
[ext_resource type="StyleBox" uid="uid://cuy6jfvmak18d" path="res://styles/button.tres" id="5_m41qk"]
[ext_resource type="FontFile" uid="uid://drdae01rqb3r3" path="res://Fonts/LilitaOne-Regular.ttf" id="5_tpnoy"]
[ext_resource type="PackedScene" uid="uid://ba4dw7afjhbi2" path="res://scenes/UI/Popups/event_card.tscn" id="7_35jxk"]
[ext_resource type="PackedScene" uid="uid://bns4cfqvli8a7" path="res://scenes/Parametre/quit_game.tscn" id="9_owlbh"]
[ext_resource type="PackedScene" uid="uid://bi68a6b5rjjg5" path="res://scenes/Parametre/settings.tscn" id="10_c5elv"]
[ext_resource type="PackedScene" uid="uid://irfsxn8puawo" path="res://scenes/UI/Popups/fly_offer.tscn" id="13_64obo"]
[ext_resource type="Texture2D" uid="uid://cnhqd6hhljbpi" path="res://assets/Leave button.png" id="16_5t1j6"]
[ext_resource type="Texture2D" uid="uid://dwxruxw80f1dr" path="res://assets/Settings button.png" id="17_4nac7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m41qk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7e3k0"]
bg_color = Color(0.368627, 0.164706, 0.0901961, 1)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m41qk"]
bg_color = Color(0.227451, 0.0862745, 0.0470588, 1)
border_color = Color(1, 1, 1, 0)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_nt7q6")

[node name="Dice" parent="." instance=ExtResource("3_wm3ai")]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -191.0
offset_top = -107.0
offset_right = 179.0
offset_bottom = 93.0
grow_horizontal = 0
grow_vertical = 0

[node name="PopUpOffre" parent="." instance=ExtResource("4_8dubc")]
visible = false

[node name="PopUpJail" parent="." instance=ExtResource("4_7e3k0")]
visible = false
offset_left = -393.0
offset_top = -243.0
offset_right = 407.0
offset_bottom = 157.0

[node name="EndTurnButton" type="Button" parent="."]
visible = false
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -153.0
offset_top = 14.0
offset_right = -3.0
offset_bottom = 60.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_tpnoy")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_m41qk")
theme_override_styles/hover = SubResource("StyleBoxFlat_7e3k0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_m41qk")
theme_override_styles/normal = ExtResource("5_m41qk")
text = "End Turn"

[node name="TurnLable" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -108.0
offset_top = 5.0
offset_right = 108.0
offset_bottom = 47.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "Player's turn: 0"

[node name="GuestHubContainer" type="VBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -251.0
offset_top = 47.0
offset_right = -69.0
offset_bottom = 395.0
grow_horizontal = 0

[node name="MainPlayerHub" parent="." instance=ExtResource("2_gdt2y")]
z_index = 0
layout_direction = 0
anchors_preset = 4
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
offset_top = -50.5
offset_right = 310.0
offset_bottom = 50.5
grow_horizontal = 1
mouse_force_pass_scroll_events = true

[node name="MenuBtn" type="Button" parent="."]
z_index = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -104.3
offset_top = -56.0
offset_right = 104.3
grow_horizontal = 2
grow_vertical = 0
text = "menu"

[node name="quit_game" parent="." instance=ExtResource("9_owlbh")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -395.0
offset_top = -220.0
offset_right = 405.0
offset_bottom = 180.0

[node name="Settings" parent="." instance=ExtResource("10_c5elv")]
visible = false
offset_left = 106.0
offset_top = 100.0
offset_right = -110.0
offset_bottom = -283.0

[node name="EventCard" parent="." instance=ExtResource("7_35jxk")]
visible = false

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 14.0
offset_top = 20.0
offset_right = 112.0
offset_bottom = 70.0

[node name="quit" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("16_5t1j6")
stretch_mode = 0

[node name="setting" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("17_4nac7")
stretch_mode = 0

[node name="Info" type="ColorRect" parent="."]
visible = false
offset_left = 350.0
offset_top = 332.0
offset_right = 650.0
offset_bottom = 468.0

[node name="VBoxContainer" type="VBoxContainer" parent="Info"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InfoMessage" type="Label" parent="Info/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
theme_override_colors/font_color = Color(0.0352941, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "INFO"
autowrap_mode = 2

[node name="OkButton" type="Button" parent="Info/VBoxContainer"]
layout_mode = 2
text = "Ok"

[node name="FlyOffer" parent="." instance=ExtResource("13_64obo")]
visible = false

[connection signal="accept_offer_clicked" from="." to="." method="_on_accept_offer_clicked"]
[connection signal="pressed" from="MenuBtn" to="." method="_on_menu_btn_pressed"]
[connection signal="pressed" from="HBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="HBoxContainer/setting" to="." method="_on_setting_pressed"]
[connection signal="pressed" from="Info/VBoxContainer/OkButton" to="." method="_on_ok_button_pressed"]
